[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "uvicorn>=0.35.0",
]
